# A2_Visual_Computing

./: CMakeLists.txt  README.md  main.cpp
Example/OpenGLIntro/Part01/: simpleWindow.cpp
Example/OpenGLIntro/Part02/: redTriangle.cpp
Example/OpenGLIntro/Part03/: webcamQuad.cpp
common/: Camera.cpp  Camera.hpp  Object.cpp  Object.hpp  Quad.cpp  Quad.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  TextureShader.cpp  TextureShader.hpp
shaders/: videoTextureShader.frag
